test/files/neg/quasiquotes_syntaxerrors_qq1.scala
object Test extends App {
  println(s"
  println(s")
  println(s"foo
  println(s"foo)
  println(s"${
  println(s"${foo)
  println(s"${foo:
  println(s"${foo:)
  println(s"${foo: bar
  println(s"${foo:bar)
}